# dtos-manage-breast-screening

./: .dockerignore  .eslintrc.cjs  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .tool-versions  DO-NOT-MERGE.md  Dockerfile  Makefile  NOTES.txt  README.md  allurerc.json  cis2_auth.md  cis2_cm_cli.py  eslint.config.js  flags.production.yml  jest.config.js  jest.setup.js  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  rollup.config.js  tempfile  test.txt  tsconfig.base.json  tsconfig.dev.json  tsconfig.json
.azuredevops/pipelines/: delete-review-app.yml  deploy.yml
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github/workflows/: cicd-1-pull-request-closed.yaml  cicd-1-pull-request.yaml  cicd-2-main-branch.yaml  scan-repository.yaml  stage-1-commit.yaml  stage-2-test.yaml  stage-3-build.yaml  stage-4-deploy.yaml
docs/: breast-diagram-export-readme.md  cis2_auth.md  feature-flags.md  testing-approach.md
docs/adr/: ADR-002-Use_Jinja2.md  ADR-003-Subclass_Django_Form_fields.md  ADR-004-Custom_audit_logging.md  ADR-005-Enforce_provider_scoped_queries.md  ADR-005-User_attribution_immutable_state_records.md  ADR-006-Gateway_API_versioning_strategy.md  ADR-007-BS_Select_Batch_API.md  ADR-007-View_and_URL_naming_conventions.md
docs/diagrams/: README.md  erd.md  workspace.dsl
docs/infrastructure/: create-environment.md  deployment.md  environment-variables.md  infra-faq.md  metrics-and-logging.md
docs/plans/: 2026-02-23-dependabot-reviewer.md
infrastructure/terraform/: .terraform.lock.hcl  data.tf  front_door.tf  main.tf  output.tf  providers.tf  variables.tf
infrastructure/test-root-module/: main.tf  terraform.tfvars  variables.tf
manage_breast_screening/: conftest.py  tsconfig.client.json  tsconfig.json  tsconfig.node.json
manage_breast_screening/auth/: apps.py  backends.py  demo_views.py  models.py  oauth.py  roles.py  rules.py  ruleset.py  services.py  urls.py  views.py
manage_breast_screening/batches/: api.py  models.py  services.py
manage_breast_screening/clinics/: admin.py  forms.py  models.py  (+7 more)
scripts/: dependabot_reviewer.py  lint_github_actions_no_expr_in_run.py  lint_model_usage_in_views.py  lint_provider_scoping_grep.sh  shared.mk  view-repository-linter.sh
(+1107 files in other folders)
